# GrayFSM

./: .gitignore  .gitleaks.toml  .pre-commit-config.yaml  BACKEND-ARCHITECTURE.md  BACKEND-COMPLETE-REPORT.md  BACKEND-IMPLEMENTATION-GUIDE.md  BACKEND-IMPLEMENTATION-SUMMARY.md  BACKEND-SERVICES.md  CONTRIBUTING.md  DATABASE-CHEATSHEET.md  DATABASE-QUICKSTART.md  DEPLOYMENT_COMPLETE.md  E2E_IMPLEMENTATION_SUMMARY.md  E2E_TEST_SUITE_DOCUMENTATION.md  ERRORS_FIXED.md  FINAL_STATUS.md  FRONTEND-ARCHITECTURE.md  FRONTEND-DOCS-OVERVIEW.txt  FRONTEND-INDEX.md  FRONTEND-README.md  INSTALLATION_STATUS.md  INSTALL_ALL.sh  LICENSE  Makefile  NEXT_STEPS.md  OBSERVABILITY_DELIVERY.md  PERFORMANCE_DELIVERABLES.md  QUICK_START_GUIDE.md  README.md  RUN_CLI.sh  START_BACKEND_NO_DOCKER.sh  SUCCESS.md  TEST_NOW.sh  database-design.md  database-schema.sql  run.sh  start-system.sh
agents/: backend-agent.md  database-agent.md  devops-agent.md  testing-agent.md
backend/: .env.example  .gitignore  FILES-CREATED.md  INSTALL_DEPENDENCIES.md  MYPY-STRICT-PLAN.md  README.md  alembic.ini  complete_implementation.py  finalize_implementation.sh  generate_backend.sh  generate_complete_backend.py  implement_remaining.sh  pyproject.toml  requirements.txt
backend/alembic/: DRIFT.md  env.py
backend/alembic/versions/: 5c754bee004e_initial_migration.py  a1b2c3d4e5f6_seed_categories_and_examples.py  b2c3d4e5f6a7_performance_indexes.py  c3d4e5f6a7b8_add_users_table.py  d4e5f6a7b8c9_add_pg_trgm_index_on_fsms_name.py  e6a8c9d0b3f1_algorithm_result_full_snapshot.py  f5125b99928d_align_head_with_models.py  g7b9d0e1c4f2_clean_slate_reseed.py
backend/app/: cache.py  config.py  main.py
backend/app/api/v1/: __init__.py  algorithm.py  auth.py  category.py  example.py  export.py  fsm.py  health.py  tasks.py
backend/app/core/: fsm_model.py  gray_code.py  hypercube.py
backend/app/core/algorithms/: __init__.py  bfs_optimal.py  genetic_algorithm.py  greedy.py  simulated_annealing.py
backend/app/core/exporters/: __init__.py  csv_exporter.py  json_exporter.py  sva_exporter.py  testbench.py  verilog.py  vhdl.py
backend/app/db/: session.py
backend/app/middleware/: auth.py  error_handler.py  logging.py  rate_limit.py  response_wrapper.py  security_headers.py  token_blacklist.py
backend/app/models/: __init__.py  fsm.py  user.py
backend/app/observability/: __init__.py  metrics.py  telemetry.py
backend/app/schemas/: auth.py  fsm.py
backend/app/services/: auth_service.py  category_service.py  example_service.py  export_service.py  fsm_service.py  optimization_service.py
backend/app/tasks/: __init__.py  optimization.py
backend/app/utils/: exceptions.py  logger.py  validators.py
backend/examples/: elevator.json  elevator_10floor.json  sequence_detector.json  traffic_light.json  vending_machine.json
backend/src/grayfsm/: cli.py
backend/src/grayfsm/core/: fsm_model.py  gray_code.py  hypercube.py
backend/src/grayfsm/core/algorithms/: __init__.py  base.py  greedy.py
backend/tests/: README.md  conftest.py
backend/tests/api/: conftest.py  test_export_authorization.py  test_optimize_authorization.py  test_optimize_initial_state.py  test_response_envelope.py  test_visibility_access.py
backend/tests/integration/: test_export_endpoints.py  test_fsm_endpoints.py  test_hdl_roundtrip.py  test_health_endpoints.py  test_optimization_endpoints.py
backend/tests/test_core/: test_auth.py  test_bfs_optimal.py  test_csv_exporter.py  test_fsm_model.py  test_gray_code.py  test_greedy.py  test_hypercube.py  test_json_exporter.py  test_optimization_service_helpers.py  test_property_based.py  test_simulated_annealing.py  test_sva_exporter.py  test_testbench_exporter.py  test_token_blacklist.py  test_verilog_exporter.py  test_vhdl_exporter.py
database/: .env.example  IMPLEMENTATION_SUMMARY.md  README.md  alembic.ini  docker-compose.yml
docs/: ARCHITECTURE-DIAGRAMS.md  BACKEND-SUMMARY.md  CLI_USAGE.md  CODEBASE_EXAMINATION_REPORT.md  CONNECT_FRONTEND_BACKEND.md  FIX_DATABASE.md  FRONTEND-CHEATSHEET.md  FRONTEND-DOCS-OVERVIEW.txt  FRONTEND-STORYBOOK-GUIDE.md  FRONTEND-SUMMARY.md  FRONTEND_READY.md  IMPLEMENTATION-DELIVERABLES.md  RUNBOOK.md  SECURITY-GAPS.md  START_BACKEND.sh  database-erd.txt  database-queries.sql  idea.MD  openapi-spec.yaml
e2e/: .env.example  QUICK_START.md  README.md  package.json  playwright.config.ts  tsconfig.json
explainer/: README.md  algorithms.md  api-endpoints.md  architecture.md  auth-security.md  (+10 more)
(+263 files in other folders)
