[tool.poetry]
name = "grayfsm"
version = "0.1.0"
description = "FSM optimization using Gray code encoding with automatic dummy state insertion"
authors = ["GrayFSM Team"]
readme = "README.md"
packages = [{include = "grayfsm", from = "src"}]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.115.0"
uvicorn = {extras = ["standard"], version = "^0.30.0"}
networkx = "^3.2.1"
pydantic = "^2.5.0"
sqlalchemy = "^2.0.23"
alembic = "^1.13.0"
python-dotenv = "^1.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
pytest-cov = "^4.1.0"
pytest-asyncio = "^0.21.1"
# Used by tests/test_core/test_property_based.py — without it the test
# module fails to import on a fresh clone.
hypothesis = "^6.92.0"
# Caps individual test runtime; the api/ integration suite is fast but a
# regression that pegs an async loop shouldn't hang CI indefinitely.
pytest-timeout = "^2.2.0"
black = "^23.11.0"
ruff = "^0.1.6"
mypy = "^1.7.1"

[tool.poetry.scripts]
grayfsm = "grayfsm.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
# 30s default per-test timeout via pytest-timeout. Long-running property-
# based suites still set their own per-test override via @settings.
addopts = "-v --timeout=30"

[tool.black]
line-length = 100
target-version = ['py310']

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
# Conservative starter set. Defaults (E, F) only catch a fraction of what
# ruff knows about — these add the well-known stable rule packs that
# don't require sweeping cleanup of the existing codebase.
#
# Deliberately NOT enabled here (each is a real improvement but worth
# its own focused PR with proper triage):
#   - "UP" (pyupgrade): flags ~290 typing.List / Optional[X] modernizations
#   - "S"  (bandit):    mostly false positives in this codebase
#   - "RUF002":         cosmetic en-dash flagging in docstrings
select = [
    "E",    # pycodestyle errors
    "F",    # pyflakes
    "W",    # pycodestyle warnings
    "I",    # isort (import order)
    "N",    # pep8-naming
    "B",    # flake8-bugbear (real-bug catchers like mutable default args)
]
ignore = [
    # FastAPI uses `= Depends(...)` in defaults — framework pattern,
    # not a B008 mutable-default-argument bug.
    "B008",
    # E501 (line too long) is enforced by `ruff format`, not `ruff check`,
    # so disable the duplicate complaint.
    "E501",
    # GrayFSMException intentionally doesn't use the "Error" suffix —
    # renaming it would touch every `except GrayFSMException:` site in
    # the codebase. Tracked for a future renaming PR.
    "N818",
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = [
    "N802",  # test functions sometimes shadow class names by convention
]
"alembic/versions/**" = [
    "E501",  # auto-generated migrations often exceed line length
    "I",     # alembic generates its own import order
    "UP",    # don't modernize generated migrations
]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
